tests/error/no_cast.gw
#! [contains] can't cast
class C{}
class D{}

var C c;
var D d;
<<< c $ D >>>;
<<< d >>>;
